--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">DayliJoy</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- strings.xml -->
+    <string name="welcome_message">¡Bienvenido a la App de Cosas Buenas!</string>
+    <string name="app_description">Registra 5 cosas buenas que te sucedieron cada día y mantén un registro positivo de tu vida.</string>
+    <string name="start_button">Comenzar</string>
+    <string name="logo_desc">Logo de la aplicación</string>
+    <string name="add_sentence">Add Sentence</string>
+
 </resources>
