--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <!-- strings.xml -->
     <string name="welcome_message">¡Bienvenido a la App de Cosas Buenas!</string>
     <string name="app_description">Registra 5 cosas buenas que te sucedieron cada día y mantén un registro positivo de tu vida.</string>
+    <string name="app_description2">El reto esta en no repetir ninguna!.</string>
     <string name="start_button">Comenzar</string>
     <string name="logo_desc">Logo de la aplicación</string>
     <string name="add_sentence">Add Sentence</string>
